--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'net.sourceforge.owlapi:org.semanticweb.hermit:1.4.5.519'
     implementation 'com.github.ajalt.clikt:clikt:3.4.2'
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0-RC2")
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.9.21"
 }
 
 test {
